--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-title = "WEBSITE"
+title = "WEBSITEs"
 languageCode = "en-us"
 style = "default"
 theme = "hugo-creative-portfolio-theme"
