--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,11 @@
-baseurl = "/"
-title = "WEBSITEs"
+baseurl = "https://example.org/"
+title = "Creative portfolio"
+theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
-
+# Enable comments by entering your Disqus shortname
+disqusShortname = ""
+# Enable Google Analytics by entering your tracking code
+googleAnalytics = ""
 
 [params]
   # Style options: default (pink), blue, green, pink, red, sea, violet
