--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://example.org/"
-title = "test"
+baseurl = "/"
+title = "website"
 theme = "hugo_theme_robust"
 languageCode = "en-us"
