--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,7 @@ baseurl = "/"
 title = "website"
 theme = "hugo_theme_robust"
 languageCode = "en-us"
+
+[taxonomies]
+  category = "categories"
+  tag = "tags"
